[package]
name          = "tao-log"
version       = "0.1.0"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
edition       = "2018"
license       = "MIT/Apache-2.0"
description   = "Extension macros for output to the log crate."
documentation = "https://docs.rs/tao-log"
repository    = "https://github.com/dekellum/tao-log"
readme        = "README.md"
keywords      = ["log", "logging"]
categories    = ["Debugging"]
exclude       = [".gitignore", ".travis.yml", "appveyor.yml"]

[workspace]
members = [
    "test_2015",
    "test_2018",
    "test_compile_errors",
]

[badges]
travis-ci = { repository="dekellum/tao-log" }

[dependencies]
log = { version = ">= 0.4.6, < 0.5" }

[build-dependencies]
version_check = { version=">=0.1.5, <2" }

[[test]]
name = "log_v"
harness = false
